Fix the bookmark button alignment.

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -404,7 +404,8 @@ body {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-  margin-top: 5px;
+  margin-top: 3px;
+  padding-top: 4px;
 }
 
 .toolbarButton.bookmark::before {
